fix jumping animation in select commit_hash:63cb7955abc7073644c6e5d38064fad63e0daa8a

--- a/perforator/ui/app/src/components/Select/Select.scss
+++ b/perforator/ui/app/src/components/Select/Select.scss
@@ -20,7 +20,7 @@
     margin: 10px 0;
 }
 
-.select__control {
+.select__control .g-select-control {
     /* disable animation https://github.com/gravity-ui/uikit/blob/80752145ce50d914c208b47f551b6a8577534f3d/src/components/Select/components/SelectControl/SelectControl.scss#L75 */
     /* stylelint-disable-next-line declaration-no-important */
     transition: none !important;
